--- a/index.html
+++ b/index.html
@@ -23,5 +23,18 @@
       <a href="https://www.google.com/destination/map/topsights?q=things+to+do+in+switzerland&rlz=1C1GGRV_enUS750US750&site=search&output=search&dest_mid=/m/06mzp&sa=X&ved=0ahUKEwiqqaSetdLUAhUU42MKHR3aCXgQ6tEBCC4oBTAA" class="btn">Learn more</a>
     </div>
   </div>
-</body>
+  <h2>Mountain biking</h2>
+  <p>Saint-Luc, Switzerland
+High in the giddy, vertical world of the Anniviers valley, Saint-Luc offers quintessential Swiss singletrack set against seriously stunning backdrops. A small but hardcore park adds some adrenaline to the mix. The small resort of Saint-Luc isn’t an obvious choice in this area: it’s nearby Zermatt, which has the most famous backdrops and singletracks in the business, while Crans-Montana in the Sierre valley below has the established park scene. However, the riding at Saint-Luc is every bit as good, both in the park and out in the wilds. The funicular uplift is open much earlier than its neighbours, and the sunny slopes mean dry and dusty trails by early spring, so you can get your big-mountain singletrack fix before the main biking season really kicks off.</p>
+  <h3>snowboarding</h3>
+  <p> Davos
+Snowboard Guide rating 10 out of 10 “	The best overall resort in Switzerland offering something for everyone. Huge pisted area and excellent freeriding spread across 5 mountains, and not to mention the terrain park and 2 halpipes.</p> 
+  <h4>hiking</h4>
+  <p>Following the Doubs: The Swiss Water Trail
+Soubey - St-Ursanne
+    15 kilometres of meditative hiking pleasure and one of Switzerland's most beautiful "water trails" run between Soubey and St-Ursanne.</p>
+  <h5>rRafting</h5>
+  <p>RIVER RAFTING SWITZERLAND
+Set beneath the watershed of the Eiger, Monch and Jungfrau mountains, Interlaken is internationally renowned for its variety of rivers and white water rafting tours.  Here you'll find everything from fast flowing alpine rivers with adrenaline fuelled class IV rapids,  to calm sunny floating trips on the famous warm water of the Aare river between Thun and Bern.Our team of internationally accredited guides will raft you down some of the most scenic rivers in Switzerland, providing safety and professionalism together with the thrills of white water action. Iconic peaks from the Jungfrau region including the dramatic Eiger North Wall provide the backdrop for our uniquely spectacular raft trips, and guarantee a memorable experience for all participants.</p>
+  </body>
 </html>
