--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <div id="cover">
     <div class="cover-content">
-      <h1>Things to do in switzerland</h1>
+      <h1>Fun Things to do in switzerland</h1>
       <a href="https://www.google.com/destination/map/topsights?q=things+to+do+in+switzerland&rlz=1C1GGRV_enUS750US750&site=search&output=search&dest_mid=/m/06mzp&sa=X&ved=0ahUKEwiqqaSetdLUAhUU42MKHR3aCXgQ6tEBCC4oBTAA" class="btn">Learn more</a>
     </div>
   </div>
