--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ Snowboard Guide rating 10 out of 10 “	The best overall resort in Switzerland o
   <p>Following the Doubs: The Swiss Water Trail
 Soubey - St-Ursanne
     15 kilometres of meditative hiking pleasure and one of Switzerland's most beautiful "water trails" run between Soubey and St-Ursanne.</p>
-  <h5>rRafting</h5>
-  <p>RIVER RAFTING SWITZERLAND
+  <h5>Rafting</h5>
+  <p>
 Set beneath the watershed of the Eiger, Monch and Jungfrau mountains, Interlaken is internationally renowned for its variety of rivers and white water rafting tours.  Here you'll find everything from fast flowing alpine rivers with adrenaline fuelled class IV rapids,  to calm sunny floating trips on the famous warm water of the Aare river between Thun and Bern.Our team of internationally accredited guides will raft you down some of the most scenic rivers in Switzerland, providing safety and professionalism together with the thrills of white water action. Iconic peaks from the Jungfrau region including the dramatic Eiger North Wall provide the backdrop for our uniquely spectacular raft trips, and guarantee a memorable experience for all participants.</p>
   </body>
 </html>
